@@ -171,6 +171,11 @@ Print messages about what
 .B xcowsay
 is doing. Useful for finding out why the daemon fails.
 .TP
+.B "--release"
+Close window on release event instead of press.  The corresponding
+config file option is
+.IR close_event=button-release-event .
+.TP
 .B "-v, --version"
 Print version information.
 .SH "AUTHOR"
